--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.2.5",
         "axios": "^0.21",
         "dotenv": "^8.2.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.2.8",
+        "tailwindcss": "^2.0.3"
     }
 }
