--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "alpinejs": "^2.8.1",
         "autoprefixer": "^10.2.5",
         "dotenv": "^8.2.0",
         "laravel-mix": "^6.0.6",
