add compiled assets

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=6a7d5a199bc27c58aa18",
+    "/css/app.css": "/css/app.css?id=7ca9cc3b61de0cf981b2"
 }
